--- a/.github/workflows/book-tennis.yml
+++ b/.github/workflows/book-tennis.yml
@@ -2,12 +2,11 @@ name: Book Tennis Court
 
 on:
   schedule:
-    # Runs at Monday 15:00, 16:00, Thursday 12:00, 13:00 UTC
-    - cron: "0 15 * * 1"  # Monday 15:00 UTC
-    - cron: "0 16 * * 1"  # Monday 16:00 UTC
-    - cron: "0 12 * * 4"  # Thursday 12:00 UTC
-    - cron: "0 13 * * 4"  # Thursday 13:00 UTC
-  workflow_dispatch:  # Allows manual triggering
+    - cron: "0 15 * * 1"  # Monday 15:00 UTC = 19:00 GST
+    - cron: "0 16 * * 1"  # Monday 16:00 UTC = 20:00 GST
+    - cron: "0 12 * * 4"  # Thursday 12:00 UTC = 16:00 GST
+    - cron: "0 13 * * 4"  # Thursday 13:00 UTC = 17:00 GST
+  workflow_dispatch:
 
 jobs:
   book-slot:
@@ -28,18 +27,16 @@ jobs:
 
       - name: Set up Chrome and ChromeDriver
         run: |
-            sudo apt-get update
-            sudo apt-get install -y google-chrome-stable
-            google-chrome --version  # Debug: Show Chrome version
-            wget -q "https://chromedriver.storage.googleapis.com/133.0.6943.90/chromedriver_linux64.zip" || echo "wget failed"
-            ls -la  # Debug: Show downloaded files
-            unzip chromedriver_linux64.zip || echo "unzip failed"
-            sudo mv chromedriver /usr/local/bin/ || echo "mv failed"
-            sudo chmod +x /usr/local/bin/chromedriver || echo "chmod failed"
-            which chromedriver  # Debug: Confirm location
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+          wget -q "https://chromedriver.storage.googleapis.com/133.0.6943.90/chromedriver_linux64.zip"
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          sudo chmod +x /usr/local/bin/chromedriver
 
       - name: Run booking script
         env:
+          CALENDLY_URL: ${{ secrets.CALENDLY_URL }}
           FULL_NAME_1: ${{ secrets.FULL_NAME_1 }}
           EMAIL_1: ${{ secrets.EMAIL_1 }}
           BUILDING_NAME_1: ${{ secrets.BUILDING_NAME_1 }}
