--- a/.github/workflows/book-tennis.yml
+++ b/.github/workflows/book-tennis.yml
@@ -29,14 +29,18 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
-          google-chrome --version  # Debug: Confirm Chrome version
-          wget -q "https://chromedriver.storage.googleapis.com/133.0.6943.90/chromedriver_linux64.zip" || { echo "wget failed"; exit 1; }
-          ls -la  # Debug: Show downloaded files
+          google-chrome --version
+          # Retry wget up to 3 times with verbose output
+          for i in {1..3}; do
+            wget "https://chromedriver.storage.googleapis.com/133.0.6943.90/chromedriver_linux64.zip" && break
+            echo "wget attempt $i failed, retrying..."
+            sleep 2
+          done
+          ls -la
           unzip chromedriver_linux64.zip || { echo "unzip failed"; exit 1; }
           sudo mv chromedriver /usr/local/bin/ || { echo "mv failed"; exit 1; }
           sudo chmod +x /usr/local/bin/chromedriver || { echo "chmod failed"; exit 1; }
-          chromedriver --version  # Debug: Confirm ChromeDriver version
-
+          chromedriver --version
       - name: Run booking script
         env:
           CALENDLY_URL: ${{ secrets.CALENDLY_URL }}
