--- a/.github/workflows/book-tennis.yml
+++ b/.github/workflows/book-tennis.yml
@@ -30,7 +30,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
           google-chrome --version
-          wget "https://chromedriver.storage.googleapis.com/134.0.7032.69/chromedriver_linux64.zip"
+          wget "https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip" || { echo "wget failed"; exit 1; }
           ls -la
           unzip chromedriver_linux64.zip || { echo "unzip failed"; exit 1; }
           sudo mv chromedriver /usr/local/bin/ || { echo "mv failed"; exit 1; }
