--- a/.github/workflows/test-book-tennis.yml
+++ b/.github/workflows/test-book-tennis.yml
@@ -18,17 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install selenium
-          # Get the Chrome version
-          CHROME_VERSION=$(google-chrome --version | grep -o "[0-9]*\.[0-9]*\.[0-9]*")
-          CHROME_MAJOR_VERSION=$(echo $CHROME_VERSION | cut -d'.' -f1)
-          # Download the matching ChromeDriver
-          wget -q -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/${CHROME_MAJOR_VERSION}.0.6943.141/chromedriver_linux64.zip
-          unzip /tmp/chromedriver.zip -d /tmp/
-          sudo mv /tmp/chromedriver /usr/local/bin/chromedriver
-          rm /tmp/chromedriver.zip
-          # Verify ChromeDriver version
-          chromedriver --version
+          pip install selenium webdriver-manager
 
       - name: Run booking script
         env:
